# shop-r1

./: .gitignore  FRESH_POD_SETUP.md  Makefile  README.md  README_TESTING.md  RUNPOD_QUICK_SETUP.sh  commands.md  commit.md  pod_commands.txt  pyproject.toml  remote_test.sh  run_evaluation_on_pod.sh  shop_r1.py  test_dual_server.sh  test_grpo_fix.py  test_grpo_fixed_batch.sh  test_grpo_simple.sh  test_grpo_working.sh  test_remote.sh  test_standalone.py  update_pod.sh  verify_grpo_routing.sh
configs/: __init__.py  endpoints.py
docs/: PR_DRAFT.md  README.md  code_standards.txt  primeintellect-ai-prime-environments-8a5edab282632443.txt  runpod.md  shop-r1_full_manuscript.txt  slack.txt  willccbb-verifiers-8a5edab282632443.txt
docs/archive/: README_old.md  VALIDATION_CHECKLIST.md  commands.md
environments/shop_r1/: README.md  __init__.py  pyproject.toml  shop_r1.py  synthesize.py
scripts/: __init__.py  ablate_components.py  eval_actions.py  eval_paper_metrics.py  rl_train_grpo.py  run_ablations.py  run_paper_evaluation.sh  sft_train.py  shop_r1_env.py
scripts/evaluation/: build_episodes_from_singleturn.py  check_dataset_format.py  fix_zero_shot_prompting.py  multiturn_eval.py  multiturn_eval_exact_kl.py  run_zero_shot_improved.sh  test_evaluation_diagnostic.py
scripts/training/: multiturn_rl_skeleton.py  run_grpo_complete.sh
shop-R1/shop_r1_env/: README.md  pyproject.toml
shop-R1/shop_r1_env/environments/: __init__.py
shop-R1/shop_r1_env/environments/shop_r1/: __init__.py
shop-R1/shop_r1_env/shop_r1_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: README.md  quick_test.py  test_locally.sh  test_shop_r1_smoke.py
