[project]
name = "shop-r1"
version = "0.1.0"
description = "Shop-R1 environment for verifiers"
requires-python = ">=3.8"
dependencies = [
    "verifiers",
    "requests>=2.31",
    "datasets>=2.19.0", 
    "transformers>=4.43",
    "accelerate>=0.30",
    "peft>=0.11",
]

[tool.setuptools]
packages = ["shop_r1"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"